--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -34,6 +34,7 @@ div#log {
     transform-origin: center bottom 0px;
     transition: all 0.5s ease 0s;
     box-shadow: 0px 22px 54px rgba(0, 0, 0, 0.5);
+
 }
 body.tight .wrapper {
     transform: translateY(-60px) scale(0.9);
@@ -50,6 +51,14 @@ body.tight .wrapper {
     font-size: 2.125rem;
     font-family: "Raleway", sans-serif;
     padding-top: 40px;
+}
+footer ul, li, a {
+  color: white;
+  list-style-type: none;
+  margin-left: 300px;
+
+
+
 }
 @-moz-keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
@@ -113,4 +122,12 @@ body.tight .wrapper {
     -moz-animation: bounce 2s infinite;
     -webkit-animation: bounce 2s infinite;
     animation: bounce 2s infinite;
+}
+.twttrfeed {
+  padding-top: 200px;
+  margin-right: 550px;
+  margin-top: -385px;
+}
+.perfect{
+
 }
