--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -24,17 +24,15 @@ body {
     background: rgba(0, 0, 0, 0.7);
 }
 div#log {
-    font-size: 500%;
+    font-size: 80px;
     font-weight: bold;
 }
 .wrapper {
-    /*background: url("http://i.imgur.com/YCSYk8J.jpg") no-repeat scroll center center/cover transparent;*/
-    background-color: #ffd966;
+    background: url("../images/logo.png") no-repeat scroll center center/cover transparent;
     min-height: 100vh;
     transform-origin: center bottom 0px;
     transition: all 0.5s ease 0s;
     box-shadow: 0px 22px 54px rgba(0, 0, 0, 0.5);
-
 }
 body.tight .wrapper {
     transform: translateY(-60px) scale(0.9);
@@ -53,12 +51,10 @@ body.tight .wrapper {
     padding-top: 40px;
 }
 footer ul, li, a {
-  color: white;
-  list-style-type: none;
-  margin-left: 300px;
-
-
-
+    color: white;
+    list-style-type: none;
+    margin-right: 35px;
+    
 }
 @-moz-keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
@@ -124,10 +120,26 @@ footer ul, li, a {
     animation: bounce 2s infinite;
 }
 .twttrfeed {
-  padding-top: 200px;
-  margin-right: 550px;
-  margin-top: -385px;
+   margin-right: 20px;
+
 }
-.perfect{
+#log {
+    border-style: transparent;
+    border-color: black;
+    height: 200px;
+    width: 500px;
+    background: url("../images/whoa.png");
+    color: white;
+    border-radius: 100%;
+    text-align: center;
+    margin-left: 70px;
+    margin-bottom: 60px;
+    padding-top: 70px;
+
+
+}
+.contain {
+   padding-top: 275px;
+
 
 }
