--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -28,7 +28,8 @@ div#log {
     font-weight: bold;
 }
 .wrapper {
-    background: url("../images/logo.png") no-repeat scroll center center/cover transparent;
+    background-color: #002244;
+    /*background: url("../images/logo.png") no-repeat scroll center center/cover transparent;*/
     min-height: 100vh;
     transform-origin: center bottom 0px;
     transition: all 0.5s ease 0s;
@@ -54,7 +55,7 @@ footer ul, li, a {
     color: white;
     list-style-type: none;
     margin-right: 35px;
-    
+
 }
 @-moz-keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
