png's for app download have been added. Design purposes though. Still a work in progress

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -144,3 +144,12 @@ footer ul, li, a {
 
 
 }
+.ios {
+  margin-left: 80%;
+  margin-top: -42px;
+}
+.android{
+  margin-top: -42px;
+  margin-left: 50%;
+  margin-left: 40%;
+}
