--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -50,12 +50,16 @@ body.tight .wrapper {
     font-size: 2.125rem;
     font-family: "Raleway", sans-serif;
     padding-top: 40px;
+    border-style: transparent;
+    border-color: black;
+    background: rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 22px 54px rgba(0, 0, 0, 0.5);
+    margin-bottom: 50px;
 }
 footer ul, li, a {
     color: white;
     list-style-type: none;
     margin-right: 35px;
-
 }
 @-moz-keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
@@ -121,8 +125,7 @@ footer ul, li, a {
     animation: bounce 2s infinite;
 }
 .twttrfeed {
-   margin-right: 20px;
-
+    margin-right: 60%;
 }
 #log {
     border-style: transparent;
@@ -136,20 +139,36 @@ footer ul, li, a {
     margin-left: 70px;
     margin-bottom: 60px;
     padding-top: 70px;
-
-
 }
 .contain {
-   padding-top: 275px;
-
-
+    padding-top: 275px;
 }
 .ios {
-  margin-left: 80%;
-  margin-top: -42px;
+    margin-left: 80%;
+    margin-top: -42px;
 }
-.android{
-  margin-top: -42px;
+.android {
+    margin-top: -42px;
+    margin-left: 50%;
+    margin-left: 40%;
+}
+.col0 ul {
+  margin-left: 25%;
+  margin-bottom: -100px;
+
+}
+.col1 ul {
   margin-left: 50%;
-  margin-left: 40%;
+
+}
+
+.col0 li {
+  margin-left: 25%;
+  font-size: 30px;
+
+}
+.col1 li {
+  margin-left: 50%;
+  font-size: 30px;
+
 }
